[gd_scene load_steps=4 format=3 uid="uid://ccunmb5av1l1q"]

[ext_resource type="Script" uid="uid://dreugr2belr7k" path="res://scripts/treasure_chest_2.gd" id="1_2fuoa"]
[ext_resource type="Texture2D" uid="uid://cjtmgq5ivsyts" path="res://assets/sprites/treasureChest.png" id="2_y1f0c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybsko"]
size = Vector2(71, 52)

[node name="TreasureChest2" type="Area2D"]
collision_mask = 3
script = ExtResource("1_2fuoa")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_y1f0c")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 1)
shape = SubResource("RectangleShape2D_ybsko")

[node name="Label" type="Label" parent="."]
offset_left = -67.0
offset_top = -44.0
offset_right = 71.0
offset_bottom = -21.0
theme_override_font_sizes/font_size = 12
text = "Press \"E\" to open chest"

[node name="CollectKeysLabel" type="Label" parent="."]
offset_left = -88.0
offset_top = -66.0
offset_right = 88.0
offset_bottom = -43.0
text = "Collect Both Keys First!"
horizontal_alignment = 1

[node name="ChangeSceneTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="CollectKeysLabelTimer" type="Timer" parent="."]
wait_time = 4.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="ChangeSceneTimer" to="." method="_on_change_scene_timer_timeout"]
[connection signal="timeout" from="CollectKeysLabelTimer" to="." method="_on_collect_keys_label_timer_timeout"]
